Closed
Bug 799813
Opened 13 years ago
Closed 13 years ago
cairo-qt fails to build
Categories
(Core :: Graphics: Layers, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: jbeich, Assigned: jbeich)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
5.55 KB,
patch
|
karlt
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
regressed after this commit
https://hg.mozilla.org/mozilla-central/rev/062549aab268
mozilla-central-dd61540f237c/gfx/layers/opengl/CanvasLayerOGL.cpp: In member function 'virtual void mozilla::layers::CanvasLayerOGL::Initialize(const mozilla::layers::CanvasLayer::Data&)':
mozilla-central-dd61540f237c/gfx/layers/opengl/CanvasLayerOGL.cpp:135: error: 'class gfxXlibSurface' has no member named 'GetGLXPixmap'
Got the order wrong.
https://hg.mozilla.org/mozilla-central/rev/4e1c9887f87d
Depends on: 788042
More easy to read with clang:
gfx/layers/opengl/CanvasLayerOGL.cpp:135:26: error:
no member named 'GetGLXPixmap' in 'gfxXlibSurface'
mPixmap = xsurf->GetGLXPixmap();
~~~~~ ^
1 error generated.
Attachment #669855 -
Flags: review?
Attachment #669855 -
Flags: review? → review?(karlt)
Comment 3•13 years ago
|
||
Comment on attachment 669855 [details] [diff] [review]
Bug 799813 - Apply bug 788042 under gfx/thebes to fix cairo-qt build on Linux.
These files are only built when MOZ_X11 is set, so no need to include defined(MOZ_X11).
(I guess these tests perhaps should all be based on MOZ_GL_PROVIDER, but currently that's hard to use and I imagine we'll eventually want to generalize the interface to GetGLSurface or similar, so just the !defined(MOZ_PLATFORM_MAEMO) is good for now. I don't even know if anyone still builds for Maemo.)
Attachment #669855 -
Flags: review?(karlt) → review-
Attachment #669855 -
Attachment is obsolete: true
Attachment #669943 -
Flags: review?(karlt)
Updated•13 years ago
|
Attachment #669943 -
Flags: review?(karlt) → review+
Keywords: checkin-needed
Comment 5•13 years ago
|
||
Comment 6•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Comment on attachment 669943 [details] [diff] [review]
Bug 799813 - Qt/Linux needs GetGLXPixmap() after bug 788042. r=karlt
[Approval Request Comment]
User impact if declined: broken cairo-qt on Linux (non-Maemo) or other X11 platforms
Risk to taking this patch: broken build for cairo-gtk2 on Linux
Attachment #669943 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Keywords: regression
Updated•13 years ago
|
Attachment #669943 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Keywords: checkin-needed
Comment 8•13 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•