Bug 799813 - Qt/Linux needs GetGLXPixmap() after bug 788042. r=karlt